--- a/ChatBot/packages.config
+++ b/ChatBot/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="IKVM" version="8.2.1" targetFramework="net472" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net472" />
   <package id="OpenNLP" version="1.3.5" targetFramework="net472" />
